--- a/fetch.html
+++ b/fetch.html
@@ -29,7 +29,7 @@
 
         buttonToken.addEventListener('click', () => {
             //GET-запрос по ссылке https://votesystem.mobius.team/api/result/{USER_ID}/token
-            getToken (4000);
+            getToken (40);
         });
 
         let getToken = (userId) => {
@@ -66,7 +66,7 @@
             if (response.ok) { // если HTTP-статус в диапазоне 200-299
                 // получаем тело ответа
                 let result = await response.json();
-                // console.log(result);// читает тело ответа в формате JSON
+                console.log(result);// читает тело ответа в формате JSON
                 alert(result.message);
                 showResultById(result);
             } else {
